; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_reassembly.c_ip6_evictor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_reassembly.c_ip6_evictor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.inet6_dev = type { i32 }

@ip6_frags = common dso_local global i32 0, align 4
@IPSTATS_MIB_REASMFAILS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net*, %struct.inet6_dev*)* @ip6_evictor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip6_evictor(%struct.net* %0, %struct.inet6_dev* %1) #0 {
  %3 = alloca %struct.net*, align 8
  %4 = alloca %struct.inet6_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.net* %0, %struct.net** %3, align 8
  store %struct.inet6_dev* %1, %struct.inet6_dev** %4, align 8
  %6 = load %struct.net*, %struct.net** %3, align 8
  %7 = getelementptr inbounds %struct.net, %struct.net* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = call i32 @inet_frag_evictor(i32* %8, i32* @ip6_frags)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load %struct.net*, %struct.net** %3, align 8
  %14 = load %struct.inet6_dev*, %struct.inet6_dev** %4, align 8
  %15 = load i32, i32* @IPSTATS_MIB_REASMFAILS, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @IP6_ADD_STATS_BH(%struct.net* %13, %struct.inet6_dev* %14, i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @inet_frag_evictor(i32*, i32*) #1

declare dso_local i32 @IP6_ADD_STATS_BH(%struct.net*, %struct.inet6_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
